[tool.poetry]
name = "cachethq_client"
version = "0.1.0"
description = ""
authors = ["cbrand <chris.brandom@elyxor.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2023.11.17"
six = "^1.16.0"
python-dateutil = "^2.8.2"
setuptools = "^69.0.3"
urllib3 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
