[tool.poetry]
name = "cachethq_client"
version = "0.1.5"
description = ""
authors = ["cbrand <chris.brandom@elyxor.com>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2023.11.17"
six = "^1.16.0"
python-dateutil = "^2.8.2"
setuptools = "^69.0.3"
urllib3 = "^2.1.0"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
