[tool.poetry]
name = "cachethq_client"
version = "1.0.4"
description = "A python client library for connection to a CachetHQ Server"
authors = ["elyxor <info@elyxor.com>"]
readme = "PYPI-README.md"
repository = "https://github.com/ElyxorCorp/cachethq-swagger"
documentation = "https://github.com/ElyxorCorp/cachethq-swagger/tree/dev/api-doc/README.md"
license = "BSD-3-Clause"
include = [
    { path = "test", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "setup.py", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8"
certifi = "^2023.11.17"
six = "^1.16.0"
python-dateutil = "^2.8.2"
setuptools = "^69.0.3"
urllib3 = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
